--- a/static/css/course_grades_student.css
+++ b/static/css/course_grades_student.css
@@ -1,8 +1,9 @@
 body {
     background-color: #bcdde5;
     font-family: Arial, sans-serif;
-    color: #333;
-    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
 .nav-bar {
