--- a/templates/assignment_view_teacher.html
+++ b/templates/assignment_view_teacher.html
@@ -5,6 +5,19 @@
 {% block page_title %}{{ assignment_title }}{% endblock %}
 
 {% block content %}
+  <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
 <div class="assignment-container">
     <!-- Assignment Details -->
     <div class="section">
