--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,13 @@
   <title>Gradia - Home</title>
 </head>
 <body>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
   <div class="nav-bar">
     <div class="d-flex align-items-center">
      <div class="logo-container">
