--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 <div class="main-content">
   <!-- Left placeholder -->
   <div class="left-placeholder">
