--- a/templates/announcement_edit.html
+++ b/templates/announcement_edit.html
@@ -7,6 +7,19 @@
 {% block content %}
 <div class="container mt-4">
     <form action="{{ url_for('announcement_edit', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" method="POST" enctype="multipart/form-data">
+          <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
         <div class="card">
             <div class="card-body">
                 <div class="form-group mb-3">
