--- a/templates/announcement_teacher.html
+++ b/templates/announcement_teacher.html
@@ -5,6 +5,19 @@
 {% block page_title %}Announcements{% endblock %}
 
 {% block content %}
+  <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
 <div class="announcements-container">
     <div class="create-announcement mb-3">
         <a href="{{ url_for('announcement_view_teacher', course_name=course_name, course_code=course_code) }}" class="btn btn-primary">
