--- a/templates/announcement_view_teacher.html
+++ b/templates/announcement_view_teacher.html
@@ -9,6 +9,19 @@
 {% endblock %}
 
 {% block content %}
+  <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
 <form action="{{ url_for('announcement_view_teacher', course_name=course_name, course_code=course_code) }}" method="POST" enctype="multipart/form-data">
   <div class="description-section">
     <div class="form-group mb-3">
