--- a/templates/assignments_teacher.html
+++ b/templates/assignments_teacher.html
@@ -5,6 +5,19 @@
 {% block page_title %}{{ course_name }} - Assignments{% endblock %}
 
 {% block content %}
+  <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
 <div class="assignments-container">
     <div class="lecture-cards">
         {% if assignments %}
