--- a/templates/course_grades_student.html
+++ b/templates/course_grades_student.html
@@ -9,6 +9,19 @@
   <link href="{{ url_for('static', filename='css/course_grades_student.css') }}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+    <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
     <div class="nav-bar">
     <div class="d-flex align-items-center">
       <button onclick="goBack()" class="back-button">
