--- a/templates/create_feedback.html
+++ b/templates/create_feedback.html
@@ -5,6 +5,19 @@
 {% block page_title %}Create Feedback{% endblock %}
 
 {% block content %}
+  <!--Flash Messages-->
+  <div class="container flash-messages mt-3">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
+
 
 <form action="{{ url_for('create_feedback') }}" method="POST" enctype="multipart/form-data">
     <div class="form-group mb-3">
