--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,7 +8,13 @@
   <link rel = "stylesheet", type = "text/css", href = "{{ url_for('static', filename = 'css/forgot_password.css') }}"/>
 </head>
 <body>
-
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
   <!-- Navbar -->
   <div class="nav-bar">
     <div class="d-flex align-items-center">
