--- a/templates/grade_submission.html
+++ b/templates/grade_submission.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/grade_submission.css') }}">
 </head>
 <body>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
     <!-- Navbar -->
     <div class="nav-bar">
             <i class="fas fa-brain logo-icon"></i>
