--- a/templates/profile_student.html
+++ b/templates/profile_student.html
@@ -9,6 +9,13 @@
   <link href="{{ url_for('static', filename='css/profile_student.css') }}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
   <!-- Navbar -->
   <div class="nav-bar">
     <div class="logo-container">
