--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/teacher_dashboard.css') }}" />
 </head>
 <body>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 
   <div class="nav-bar">
       <div class="d-flex align-items-center">
