--- a/templates/grade_submission.html
+++ b/templates/grade_submission.html
@@ -17,8 +17,10 @@
             {% endwith %}
     <!-- Navbar -->
     <div class="nav-bar">
+        <div class="logo-container">
             <i class="fas fa-brain logo-icon"></i>
             <strong>Gradia</strong>
+        </div>
         <div class="nav-links">
             <a href="{{url_for('about')}}">About Us</a>
             <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
