--- a/templates/course_grades_student.html
+++ b/templates/course_grades_student.html
@@ -23,13 +23,13 @@
   </div>
 
     <div class="nav-bar">
-    <div class="d-flex align-items-center">
-      <button onclick="goBack()" class="back-button">
-        <i class="fas fa-arrow-left"></i>
-      </button>
-        <span class="logo-icon">🎓</span>
-        <span>Gradia</span>
-    </div>
+        <div class="d-flex align-items-center">
+            <button onclick="goBack()" class="back-button" style="margin-right: 10px;">
+                <i class="fas fa-arrow-left"></i>
+            </button>
+                <i class="fas fa-brain" style="font-size: 25px; color: #000;"></i>
+                <strong> Gradia</strong>
+        </div>
     <div class="nav-links">
       <a href="{{url_for('about')}}">About Us</a>
       <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
