--- a/css/course_grades_student.css
+++ b/css/course_grades_student.css
@@ -1,9 +1,8 @@
 body {
     background-color: #bcdde5;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
+    color: #333;
+    line-height: 1.6;
 }
 
 .nav-bar {
@@ -13,6 +12,22 @@ body {
     padding: 10px 20px;
     border-bottom: 1px solid black;
     background-color: #bcdde5;
+}
+.nav-bar i {
+    font-size: 25px;
+    color: #000;
+    margin-right: 10px;
+}
+
+.nav-links a {
+    margin-left: 20px;
+    color: black;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.nav-links a:hover {
+    color: #1e73e4;
 }
 
 .back-button {
@@ -34,42 +49,7 @@ body {
     outline: none;
 }
 
-.nav-bar i {
-    font-size: 25px;
-    color: #000;
-    margin-right: 10px;
-}
 
-.nav-links a {
-    margin-left: 20px;
-    color: black;
-    text-decoration: none;
-    font-size: 0.9rem;
-}
-
-.nav-links a:hover {
-    color: #1e73e4;
-}
-
-
-.logo-container {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 1.5rem;
-}
-
-.nav-links {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #333;
-  font-weight: 500;
-}
 
 .profile-section {
   display: flex;
